--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>spring-cloud-stream-binder-kafka-streams</artifactId>
             <version>${spring.cloud.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-kafka-streams</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.integration</groupId>
