--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,16 @@ spring:
           binder:
             brokers: 127.0.0.1
             zkNodes: 127.0.0.1
-            configuration.commit.interval.ms: 1
+            configuration.commit.interval.ms: 100
+  h2.console:
+    enabled: true
+    path: /h2
+  jpa:
+    properties.hibernate:
+      show_sql: true
+      format_sql: true
+    show-sql: true
+
 
 logger.level:
   org.apache.kafka: DEBUG
