--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,20 @@
 logging.level:
-  it.mltk.kes: DEBUG
+  it.mltk.kes: WARN
 
 spring:
   cloud:
     stream:
       bindings:
-        output:
+        project-events-output:
           binder: kafka
           destination: project-events
           contentType: application/json
           producer:
             headerMode: raw # Outbound data has no embedded headers
-        input:
+        project-events-input:
           destination: project-events
           contentType: application/json
-          group: project-events-sink-v1
+          group: project-events-sink-v106
           consumer:
             useNativeDecoding: true
             headerMode: raw
@@ -24,15 +24,14 @@ spring:
           binder:
             brokers: 127.0.0.1
             zkNodes: 127.0.0.1
-            configuration.commit.interval.ms: 100
+            configuration.commit.interval.ms: 250
   h2.console:
     enabled: true
     path: /h2
   jpa:
     properties.hibernate:
       show_sql: true
-      format_sql: true
-    show-sql: true
+      format_sql: false
 
 
 logger.level:
