--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
       bindings:
         project-producer:
           destination: projects
+        domain-event-producer:
+          destination: events
         project-consumer:
           destination: projects
       kafka:
