--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,12 +10,18 @@ spring:
           contentType: application/json
           producer:
             headerMode: raw # Outbound data has no embedded headers
-        project-consumer:
-          destination: projects
         domain-event-consumer:
           destination: events
           contentType: application/json
           group: domain-event-consumer-v1
+          consumer:
+            useNativeDecoding: true
+            headerMode: raw
+            startOffset: earliest
+        domain-event-to-listable-consumer:
+          destination: events
+          contentType: application/json
+          group: domain-event-to-listable-consumer-v1
           consumer:
             useNativeDecoding: true
             headerMode: raw
