--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-stream-dependencies</artifactId>
-                <version>Elmhurst.RELEASE</version>
+                <version>Elmhurst.SR2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
